--- a/popup.html
+++ b/popup.html
@@ -35,8 +35,7 @@
       background-color: green;
     }
   </style>
-  <script src="popup.js"></script>
-  <!-- <script src="content.js"></script> -->
+  <script src="content.js"></script>
   <script type="text/javascript" src="https://unpkg.com/jspdf@2.0.0/dist/jspdf.umd.min.js"></script>
 </head>
 <body>
