--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingText" placeholder="text" title="Command format is '/cmd'">
+          <input type="text" class="form-control" id="floatingText" placeholder="text" title="English: '/cmd', Chinese: '#cmd'">
           <label for="floatingText" >cmd</label>
         </div>
         <div class="form-floating">
