--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' http://localhost:* http://127.0.0.1:* https://chat.openai.com;">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>ChatterKeep</title>
 
@@ -15,6 +16,7 @@
     <script src="./scripts/popup.js"></script>
     <script src="./scripts/content.js"></script>
     <script src="./scripts/promptDatas.js"></script>
+    <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
   </head>
 
   <body class="p-3 m-0 border-0 bd-example">
