--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
         height: 255px;
       }
     </style>
+    <script src="./scripts/modal.js"></script>
     <script src="./scripts/popup.js"></script>
     <script src="./scripts/content.js"></script>
     <script src="./scripts/promptDatas.js"></script>
